finished test drive on page 371

--- a/lab_7/style.css
+++ b/lab_7/style.css
@@ -7,7 +7,9 @@
   font-style: italic;
 }
 
-form label {  display: inline-block;  width: 150px;
+form label {
+  display: inline-block;
+  width: 150px;
   font-weight: bold;
 }
 
